# shobu

./: .gitignore  Cargo.toml  index.html
benches/: minimax.rs
src/: enumindex.rs  lib.rs  main.rs  select.rs
src/logic/: game.rs  halfmove.rs  mod.rs  movegen.rs
src/logic/board/: bitboard.rs  mod.rs  square.rs
src/logic/control/: agent.rs  evaluation.rs  mod.rs
