[package]
name = "shobu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
gloo-console = "0.3.0"

getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
web-sys = "0.3.64"

#[[bench]]
#name = "minimax"
